# community-addons

./: COMPATIBILITY.md  PUBLISHING_CHECKLIST.md  README.md  SHA256SUMS.txt  fill-placeholders.ps1  package-chatgpt-bridge.ps1
browser-thread-exporter/: DISCORD_POST.md  GEMINI_FULL_HISTORY_TRIAL_FOR_TESTERS.md  GEMINI_TRIAL.md  PRIVACY.md  README.md  RELEASE_NOTES_v0.3.2.md  SECURITY.md  STORE_LISTING.md  gemini-merge.html  manifest.json
chatgpt-entity-core-private/: 1 Check Setup.bat  2 Start Tailscale Funnel.bat  3 Edit Bridge Settings.bat  4 Start ChatGPT Bridge.bat  5 Keep Bridge Running Automatically.bat  6 Stop Automatic Bridge.bat  DISCORD_POST.md  OAUTH_SETUP.md  PRIVACY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  SECURITY.md  SETUP.md  START_HERE.md  TROUBLESHOOTING.md  TUNNEL_SETUP.md  bridge.env.example
codex-entity-core-plugin/: DISCORD_POST.md  PRIVACY.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  SECURITY.md
docs/: index.html
historical/: README.md  SHA256SUMS.txt
psycheros-accessibility-controls/: README.md  RELEASE_NOTES_v0.1.0-rc.1.md  deno.json  plugin.json  psycheros.ts
psycheros-accessible-font-settings/: DISCORD_POST.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.2.0.md  manifest.json
psycheros-everything-together/: README.md  RELEASE_NOTES_v0.2.0.md  (+7 more)
psycheros-htf-music-listener/watcher/: Cargo.toml
psycheros-htf-music-listener/watcher/src/: main.rs
(+146 files in other folders)
